# SOURCE: https://github.com/GNOME/pitivi/blob/0fcc448e098d430f226bc6a2912a3909c2429400/meson_options.txt
option('disable-help', type : 'boolean', value : false)
option('build-gst', type : 'boolean', value : false)

# SOURCE: https://github.com/GNOME/gtk/blob/1b62d28cbb561c12f43f08819e1714c8bf068ef7/meson_options.txt
# GDK backends
# option('x11-backend', type: 'boolean', value: true,
#   description : 'Enable the X11 gdk backend (only when building on Linux or macOS)')
# option('wayland-backend', type: 'boolean', value: true,
#   description : 'Enable the wayland gdk backend (only when building on Linux)')
# option('broadway-backend', type: 'boolean', value: false,
#   description : 'Enable the broadway (HTML5) gdk backend')
# option('win32-backend', type: 'boolean', value: true,
#   description : 'Enable the Windows gdk backend (only when building on Windows)')
# option('quartz-backend', type: 'boolean', value: true,
#   description : 'Enable the macOS gdk backend (only when building on macOS)')
#
# # Media backends
# option('media', type: 'string', value: 'gstreamer',
#   description : 'Build the specified media engines (comma-separated list, "all", or "none")')
#
# # Optional dependencies
# option('vulkan', type: 'combo', choices : ['yes', 'no', 'auto'], value : 'auto',
#   description : 'Enable support for the Vulkan graphics API')
# option('xinerama', type: 'combo', choices : ['yes', 'no', 'auto'], value : 'auto',
#   description : 'Enable support for the Xinerama extension')
# option('cloudproviders', type: 'boolean', value: false,
#   description : 'Enable the cloudproviders support')
#
# # Print backends
# option('print-backends', type : 'string', value : 'cups,file',
#   description : 'Build the specified print backends (comma-separated list, "all", or "none")')
# option('colord', type: 'combo', choices : ['yes', 'no', 'auto'], value : 'auto',
#   description : 'Build colord support for the CUPS printing backend')
#
# # Documentation and introspection
# option('documentation', type: 'boolean', value: 'false',
#   description : 'Build API reference and tools documentation')
# option('man-pages', type: 'boolean', value: 'false',
#   description : 'Build man pages for installed tools')
# option('introspection', type: 'boolean', value: 'true',
#   description : 'Build introspection data (requires gobject-introspection)')
#
# # Demos and binaries
# option('demos', type: 'boolean', value: 'true',
#   description : 'Build demos and example programs')
# option('build-tests', type: 'boolean', value: 'true',
#   description : 'Build tests')
# option('install-tests', type: 'boolean', value: 'false',
#   description : 'Install tests')
